--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,20 @@
             <button id="prev-arrow" style="left: 10px; bottom: 450px;"><</button>
             <button id="next-arrow" style="right: 10px; bottom: 450px;">></button>
         </div>
-    </section>    
+    </section>   
+    
+          <!-- Section 2 -->
+          <section class="hover-content" id="content10">
+            <div class="text-content">
+              <h1>WE ARE<br> 
+                <span class="highlightone">HIRING!!!</span></h1>
+                <p style="font-size: 4rem; font-weight: 900;">Unlock Your Potential <br> with SUMMIT Careers</p>
+            </div>
+            <div class="image-content">
+                <a href="hiring.html"><img src="hiring2.png" alt="Summit TECS Values Image"></a>
+            </div>
+            <a href="partners.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
+        </section>
       
           <!-- Final Section -->
           <section class="hover-content" id="final">
