--- a/hiring.html
+++ b/hiring.html
@@ -272,7 +272,7 @@
   border: none;
   border-radius: 5px;
   color: #fff;
-  cursor: pointer;
+  cursor: url(pointer.png), auto;
   transition: background 0.3s ease;
 }
 
