--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Summit TECS</title>
+    <meta property="og:title" content="Summit" />
+    <meta property="og:description" content="At Summit We make anything happens." />
+    <meta property="og:url" content="https://www.summittecs.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://yaspro55.github.to/linkimg.jpg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
