--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="At Summit We make anything happens." />
     <meta property="og:url" content="https://www.summittecs.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://yaspro55.github.io/linkimg.jpg" />
+    <meta property="og:image" content="https://www.summittecs.com/linkimg.jpg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
