--- a/hiring.html
+++ b/hiring.html
@@ -324,7 +324,7 @@
     </div>
 
     <div class="jobs-section">
-      <h2>4 Job Openings Available</h2>
+      <h2>4 Job Available</h2>
       <div class="job">
         <h3>Mechanical Site Engineer</h3>
         <p>Experience: 2 years</p>
