--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
             transform: translateX(0);
         }
 
-        .image-content img {
+        .image-content img,
+        .image-content video {
             width: 100%;
             height: auto;
             object-fit: cover;
@@ -1038,9 +1039,18 @@
           </div>
         <a href="servises.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
+    <section class="hover-content" id="content8">
+      <div class="text-content">
+        <h1>EXCELLENCE<br> 
+        <span class="highlightone">IS THE WAY TO GO</span></h1>
+    </div>
+      <div class="image-content">
+        <video src="residentialvid1.mp4" loop autoplay muted alt="Summit TECS Engineering Image"></video>
+      </div>
+  </section>
 
       <!-- Section 4 -->
-      <section class="hover-content" id="content8">
+      <section class="hover-content" id="content9">
         <div class="text-content">
             <h1>SUMMIT<br>
                 <span class="highlightone">CORE VALUES</span>
@@ -1048,7 +1058,7 @@
         </div>
         <div class="switching-container">
             <!-- Each value container -->
-            <div class="hover-content value-container active" id="content9">
+            <div class="hover-content value-container active" id="content10">
                 <h2 class="valuename">Collaboration</h2>
                 <div class="valueimg">
                     <img src="collaboration.png" alt="Collaboration Image">
@@ -1085,7 +1095,7 @@
     </section>   
     
           <!-- Section 2 -->
-          <section class="hover-content" id="content10">
+          <section class="hover-content" id="content11">
             <div class="text-content">
               <h1>WE ARE<br> 
                 <span class="highlightone">HIRING!!!</span></h1>
