--- a/index.html
+++ b/index.html
@@ -868,6 +868,7 @@
       <button id="buttonii">About-us</button>
       <button id="buttoniii">Clients</button>
       <button id="buttoniiiiii">Contact-us</button>
+      <button id="buttoniiiiiii">Careers</button>
   </div>
     <header>
       <div class="left-buttons">
@@ -1294,6 +1295,7 @@ document.getElementById("buttoniiii").addEventListener("click", () => window.loc
 document.getElementById("buttonzero").addEventListener("click", () => window.location.href = "index.html");
 document.getElementById("buttoni").addEventListener("click", () => window.location.href = "index.html");
 document.getElementById("buttoniiiii").addEventListener("click", () => window.location.href = "servises.html");
+document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
 document.getElementById("buttonthreedotfive").addEventListener("click", () => window.location.href = "servises.html");
 
 // Value Slider Logic
