--- a/servises.html
+++ b/servises.html
@@ -371,6 +371,7 @@
     <button id="buttoniiii">Projects</button>
     <button id="buttonii">About-us</button>
     <button id="buttoniiiiii">Contact-us</button>
+    <button id="buttoniiiiiii">Careers</button>
   </div>
   <header>
     <img src="logoname.png" alt="Logo">
@@ -557,6 +558,7 @@ function preloadImages(callback) {
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
             window.location.href = "index.html#final";
         });
+        document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
 </body>
 </html>
