--- a/partners.html
+++ b/partners.html
@@ -297,6 +297,7 @@
     <button id="buttoniiii">Projects</button>
     <button id="buttonii">About-us</button>
     <button id="buttoniiiiii">Contact-us</button>
+    <button id="buttoniiiiiii">Careers</button>
 </div>
 
   <!-- Key Clients Header -->
@@ -458,6 +459,7 @@
     document.getElementById("buttoniiiiii").addEventListener("click", function () {
         window.location.href = "index.html#final";
     });
+    document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
 
     // Sequential animation for partners
   const partners = document.querySelectorAll(".project-item");
