--- a/projects.html
+++ b/projects.html
@@ -299,6 +299,7 @@
     <button id="buttonii">About-us</button>
     <button id="buttoniiii">Clients</button>
     <button id="buttoniiiiii">Contact-us</button>
+    <button id="buttoniiiiiii">Careers</button>
 </div>
 
   <header>
@@ -402,6 +403,7 @@
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
             window.location.href = "index.html#final";
         });
+        document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
 </body>
 </html>
