--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
         with their extensive technical expertise, sets us apart from the competition. <br>
           </div>
           <div class="image-content">
-              <img src="goals.png" style="height: 450px;" alt="Summit TECS Goals Image">
+              <img src="profile.png" style="height: 450px;" alt="Summit TECS Goals Image">
           </div>
       </section>
 
