--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
     }
 
     .rise {
-        background-color: #a7f0f9;
+        background-color: #e5e2e293;
         width: 50%;
         margin: 20px auto;
         border-radius: 10px;
@@ -806,7 +806,7 @@
     }
 
     .rise:hover {
-        background-color: #9dfff7; /* Fixed hover transition */
+        background-color: #ffffff; /* Fixed hover transition */
         cursor: url(pointer.png), auto;
     }
 
