--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
 
 
     .rise h1 {
-        color: #34495e;
+        color: #194b7c;
         margin-bottom: 20px;
         margin-top: 0;
         font-size: 3rem;
@@ -1146,7 +1146,7 @@
     <section class="hover-content" id="content8">
       <div class="text-content">
         <h1>EXCELLENCE<br> 
-        <span class="highlightone">IS THE WAY TO GO</span></h1>
+        <span class="highlightone">IS WHAT WE DO</span></h1>
     </div>
       <div class="image-content">
         <video src="residentialvid1.mp4" loop autoplay muted alt="Summit TECS Engineering Image"></video>
@@ -1559,8 +1559,8 @@ document.querySelectorAll('.servicecarousel').forEach((carousel) => {
 
     function animateNumber() {
         let current = 0;
-        const target = 85;
-        const duration = 2000; // Animation duration in ms
+        const target = 76;
+        const duration = 2500; // Animation duration in ms
         const stepTime = Math.ceil(duration / target);
 
         const interval = setInterval(() => {
