--- a/job1.html
+++ b/job1.html
@@ -531,7 +531,7 @@
   <h2 class="quote">Apply now</h2>
   
   <div class="contact-form">
-    <form action="https://api.web3forms.com/submit" method="POST" id="contact-form">
+    <form action="https://api.web3forms.com/submit" method="POST" id="contact-form" enctype="multipart/form-data">
       <input type="hidden" name="access_key" value="e218f665-24ca-4db6-a046-4349016069b3">
       <div class="form-group">
         <label for="name">Name</label>
