--- a/job1.html
+++ b/job1.html
@@ -490,6 +490,11 @@
             <h3>Reports To</h3>
             <p class="light">Project Manager</p>
         </div>
+        <div class="detail">
+          <img src="https://img.icons8.com/ios/50/000000/clock.png" alt="Experience Icon" class="icon">
+          <h3>Experience</h3>
+          <p class="light">2 years</p>
+      </div>
     </div>
 
     <div class="job-overview">
