--- a/job4.html
+++ b/job4.html
@@ -535,7 +535,7 @@
 
 <div class="contact-section">
   <h1>Contact Us</h1>
-  <h2 class="quote">Apply now</h2>
+  <h2 class="quote">If you find yourself qualified for this opportunity send your cv to this email {<a href="mailto:Info@Summittecs.com" style="cursor: url(pointer.png), auto; color: orange;">info@summittecs.com</a>}</h2>
   
   <div class="contact-form">
     <form action="https://api.web3forms.com/submit" method="POST" id="contact-form" enctype="multipart/form-data">
@@ -551,14 +551,6 @@
       <div class="form-group">
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" required></textarea>
-      </div>
-      <div class="form-group">
-        <label for="cv">Upload Your CV</label>
-        <div id="drop-area" class="drop-area">
-          <p>Drag and drop your CV here, or <span id="file-browser">browse</span></p>
-          <input type="file" id="file-input" name="cv" accept=".pdf,.doc,.docx" hidden>
-        </div>
-        <div id="file-preview"></div>
       </div>
       <button type="submit" class="send-btn">Send Message</button>
     </form>
