--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
             <div class="image-content">
                 <a href="hiring.html"><img src="hiring2.png" alt="Summit TECS Values Image"></a>
             </div>
-            <a href="partners.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
+            <a href="hiring.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
         </section>
         
           <!-- Final Section -->
